<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".Register2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="147dp" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        style="@style/custom_card_view_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_margin="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">

            <Spinner
                android:id="@+id/province_spinner"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/style_spinner"
                app:layout_constraintTop_toBottomOf="@+id/title_Province"
                tools:layout_editor_absoluteX="0dp" />

            <RadioGroup
                android:id="@+id/radioGroup2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/input_bg"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_Gender">


                <RadioButton
                    android:id="@+id/rdbFemale"
                    android:layout_width="85dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lexend_light"
                    android:text="@string/female"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.714" />

                <RadioButton
                    android:id="@+id/rdbMale"
                    android:layout_width="85dp"
                    android:layout_height="50dp"
                    android:fontFamily="@font/lexend_light"
                    android:text="@string/male"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/rdbFemale"
                    app:layout_constraintHorizontal_bias="0.082"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.714" />

                <RadioButton
                    android:id="@+id/rdbOthers"
                    android:layout_width="85dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/lexend_light"
                    android:text="@string/others_gender"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/rdbFemale"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.724" />


            </RadioGroup>

            <Button
                android:id="@+id/button_next"
                android:layout_width="163dp"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/my_primary"
                android:text="@string/signUp"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.503"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <TextView
                android:id="@+id/title_Info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/register"
                android:textColor="@color/black"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lexend_light"
                android:text="@string/createAcc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_Info" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lexend_light"
                android:labelFor="@+id/linearLayout"
                android:text="@string/birthdate"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextText" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView5"
                tools:layout_editor_absoluteX="69dp">


                <EditText
                    android:id="@+id/birthdate"
                    android:layout_width="240dp"
                    android:layout_height="50dp"
                    android:background="@drawable/input_bg"
                    android:drawableStart="@drawable/baseline_date_range_24"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:hint="@string/birthdate"
                    android:enabled="false"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColorHint="@color/my_secondaryBlue" />

                <ImageButton
                    android:id="@+id/btnBirthdate"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginEnd="4dp"
                    android:backgroundTint="@color/my_primary"
                    app:srcCompat="@drawable/baseline_date_range_24" />
            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/lexend_light"
                android:labelFor="@+id/editTextText"
                android:text="@string/interests"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

            <EditText
                android:id="@+id/editTextText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="text"
                android:background="@drawable/input_bg"
                android:drawableStart="@drawable/baseline_interests_24"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/interests"
                android:inputType="text"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="VisualLintTextFieldSize" />

            <TextView
                android:id="@+id/title_Province"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/lexend_light"
                android:text="@string/province"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.012"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/title_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/lexend_light"
                android:text="@string/gender"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/province_spinner" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo_white"
        android:src="@drawable/blue_icon"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />


    <TextView
        android:id="@+id/program_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/orbitron_variablefont_wght"
        android:text="@string/program_name"
        android:textColor="@color/my_primary"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.231" />

    <TextView
        android:id="@+id/welcomeBack_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/squadaone_regular"
        android:shadowColor="@color/my_primary"
        android:shadowDx="5"
        android:shadowDy="5"
        android:shadowRadius="10"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:fontFamily="@font/league_spartan_extrabold"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.783" />
    <TextView
        android:id="@+id/already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/already_Account"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:layout_constraintVertical_bias="0.515" />

</androidx.constraintlayout.widget.ConstraintLayout>